fix test cases and making bruno ready for prod
